## Process this file with automake to produce Makefile.in

SUBDIRS = \
	po			\
	ftx			\
	re			\
	tinyscheme	\
	tiny-fu		\
	scripts

EXTRA_DIST = \
	autogen.sh		\
	bugs.txt		\
	debug-tiny-fu.txt	\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	tinyscheme.patch

DISTCLEANFILES = \
	intltool-extract	\
	intltool-merge		\
	intltool-update
