## Process this file with automake to produce Makefile.in

SUBDIRS = \
    po         \
    ftx        \
    re         \
    tinyscheme \
    tiny-fu    \
    scripts

EXTRA_DIST = \
    AUTHORS             \
    ChangeLog           \
    COPYING             \
    MAINTAINERS         \
    NEWS                \
    TODO                \
    autogen.sh          \
    debug-tiny-fu.txt   \
    intltool-extract.in \
    intltool-merge.in   \
    intltool-update.in

DISTCLEANFILES = \
    intltool-extract \
    intltool-merge   \
    intltool-update
